--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "ionvex-energy-solutions",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "build": "echo \"Static site - no build needed\""
+  }
+}
