--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/public/index.html" }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": "public",
+  "cleanUrls": true
 }
